force-app/main/default/objects/sugati__Checklist_Item__c/sugati__Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Checklist Item</label>
    <nameField>
        <displayFormat>CLI-{0000000}</displayFormat>
        <label>Checklist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>