force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Assigned_to_me__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Assigned_to_me__c</fullName>
    <formula>sugati__CLI_User__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to me</label>
    <type>Checkbox</type>
</CustomField>