force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Calculated_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Calculated_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>