force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Complete__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>