force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>