force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Due_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Due_Date_Offset__c</fullName>
    <label>Due Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>