force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>