force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Question__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>sugati__Question__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>