force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Question_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Question_Category__c</fullName>
    <formula>sugati__CLI_Question__r.sugati__Q_Category_Name__c</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>