force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Question_Due_Date_Based_On__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Question_Due_Date_Based_On__c</fullName>
    <formula>TEXT(sugati__CLI_Question__r.sugati__Q_Due_Date_Based_On__c)</formula>
    <label>Due Date Based On</label>
    <type>Text</type>
</CustomField>