force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Question_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Question_Name__c</fullName>
    <formula>sugati__CLI_Question__r.sugati__Q_Question_Name__c</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>