force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_Question_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_Question_Stage__c</fullName>
    <formula>TEXT(sugati__CLI_Question__r.sugati__Q_Stage__c)</formula>
    <label>Stage</label>
    <type>Text</type>
</CustomField>