force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__CLI_User__c.field-meta.xml
<CustomField>
    <fullName>sugati__CLI_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>