force-app/main/default/objects/sugati__Checklist_Item__c/fields/sugati__S_CLI_Show_On_Manifest__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CLI_Show_On_Manifest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On Manifest</label>
    <type>Checkbox</type>
</CustomField>