force-app/main/default/objects/sugati__Checklist_Item__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__CLI_Question_Name__c</columns>
    <columns>sugati__CLI_Opportunity__c</columns>
    <columns>sugati__CLI_Question__c</columns>
    <columns>sugati__CLI_User__c</columns>
    <columns>sugati__CLI_Calculated_Due_Date__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>